strings/strmov.c
@@ -24,12 +24,10 @@
 #include <my_global.h>
 #include "m_string.h"
 
-#ifdef BAD_STRING_COMPILER
+#ifdef strmov
 #undef strmov
 #define strmov strmov_overlapp
 #endif
-
-#ifndef strmov
 
 #if !defined(MC68000) && !defined(DS90)
 
@@ -53,5 +51,3 @@ char *strmov(dst, src)
 }
 
 #endif
-
-#endif /* strmov */
